# File-Analysis-App

./: README.md
OnlyHardtofindPreprocessor2/: pyproject.toml
OnlyHardtofindPreprocessor2/assets/: sample_data.csv
OnlyHardtofindPreprocessor2/pages/: 1_Data_Cleaning.py  2_Data_Analysis.py  3_Data_Visualization.py  4_Predictive_Analysis.py  5_Math_Graph_Analysis.py  app.py
OnlyHardtofindPreprocessor2/utils/: data_processor.py  ml_models.py  visualizer.py
