[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.44.1",
    "openai>=1.76.0",
    "pytesseract>=0.3.13",
    "sympy>=1.13.3",
    "opencv-python-headless>=4.11.0.86",
]
